jsonnet-guestbook/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: guestbook-ui.jsonnet
  namespace: example1
  labels:
    app.kubernetes.io/instance: aaaa
spec:
  host: guestbook-ui-jsonnet.apps.openshift.devopssolutions.net
  to:
    kind: Service
    name: jsonnet-guestbook-ui
    weight: 100
  port:
    targetPort: 80
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
